InternexDev_Sandbox/src/objects/Client_Account__c.object
<CustomObject>
    <fields>
        <fullName>AP_16_30__c</fullName>
        <defaultValue>0</defaultValue>
        <label>16-30</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AP_1_15__c</fullName>
        <defaultValue>0</defaultValue>
        <label>1-15</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AP_31_60__c</fullName>
        <defaultValue>0</defaultValue>
        <label>31-60</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AP_90__c</fullName>
        <defaultValue>0</defaultValue>
        <label>90+</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AP_Current__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Current</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_IUF_Amount__c</fullName>
        <formula>Sum_of_IUF_Retained__c - Sum_of_IUF_Used__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Sum_of_IUF_Retained - Sum_of_IUF_Used</inlineHelpText>
        <label>Actual IUF Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Interest_Initiation_Date__c</fullName>
        <description>Removed it from logic because we received start date from Grade</description>
        <formula>IF( ISBLANK(Interest_Initiation_Date__c),  DATEVALUE(CreatedDate) +  $Setup.Interest_Start_Date__c.Days_to_wait_for_Interest_calcualtion__c,Interest_Initiation_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Interest Initiation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Additional_IUF_Required__c</fullName>
        <formula>IUF_Reserve_Amount__c - Actual_IUF_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IUF Reserve Shortfall</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Application_Number__c</fullName>
        <label>Application Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BB_Coverage__c</fullName>
        <formula>IF(OR(Borrowing_Base__c &lt;= 0,FIU_Outstanding__c &lt;= 0),0, FIU_Outstanding__c / Borrowing_Base__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BB Coverage%</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>BB_Line__c</fullName>
        <formula>IF(OR(Funding_Limit__c &lt;= 0,Borrowing_Base__c &lt;= 0),0,Borrowing_Base__c / Funding_Limit__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BB Line %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Borrowing_Base_Reserve__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Borrowing Base Reserve</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Borrowing_Base__c</fullName>
        <formula>IF(MIN(Gross_Availability__c,Funding_Limit__c) - Borrowing_Base_Reserve__c &lt; 0,0,MIN(Gross_Availability__c,Funding_Limit__c) - Borrowing_Base_Reserve__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>IF(MIN(Gross_Availability,Facility Size) - Borrowing_Base_Reserve &lt; 0,0,MIN(Gross_Availability,Facility Size) - Borrowing_Base_Reserve)</inlineHelpText>
        <label>Borrowing Base</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Business_Transaction_Date__c</fullName>
        <label>Business Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bussiness_Date__c</fullName>
        <formula>$Setup.BusinessTransactionDate__c.Business_Transaction_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Business_Transaction_Date</inlineHelpText>
        <label>Business Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Client_Account_Uniqueness_check__c</fullName>
        <label>Client Account Uniqueness check</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Client_Account__c</fullName>
        <formula>Client__r.Name &amp;&apos;-&apos;&amp; Product__r.Name</formula>
        <inlineHelpText>Client Name &amp;&apos;-&apos;&amp; Product Name</inlineHelpText>
        <label>Client Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_External_Foreign_Key__c</fullName>
        <description>Created for mapping the Client account and</description>
        <externalId>true</externalId>
        <label>Client External Foreign Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <label>Client</label>
        <referenceTo>akritiv__Brand__c</referenceTo>
        <relationshipName>Client_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Commitment__c</fullName>
        <label>Min Utilization (%)</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Commitment_rate__c</fullName>
        <label>Unused Line Rate</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current__c</fullName>
        <label>Current</label>
        <summarizedField>Debtor__c.Current__c</summarizedField>
        <summaryForeignKey>Debtor__c.Client_Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Debtor_Count__c</fullName>
        <label>Debtor Count</label>
        <summaryForeignKey>Debtor__c.Client_Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Debtor_Count_for_Invoices__c</fullName>
        <label>Debtor Count for Invoices</label>
        <summaryFilterItems>
            <field>Debtor__c.Invoice_Count_for_Sending_Portal__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>Debtor__c.Client_Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Debtor_Count_for_Payments_to_Portal__c</fullName>
        <label>Debtor Count for Payments to Portal</label>
        <summaryFilterItems>
            <field>Debtor__c.Payment_Count_to_send_Portal_payments__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>Debtor__c.Client_Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Debtor_Count_for_Payments_to_Trans_Grid__c</fullName>
        <label>Debtor Count for Payments to Trans Grid</label>
        <summaryFilterItems>
            <field>Debtor__c.Payment_Count_to_send_Transaction_Grid__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>Debtor__c.Client_Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Default_Reason__c</fullName>
        <formula>TEXT(Client__r.Default_Reason__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Default Reason</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drawal_Fee_Percentage__c</fullName>
        <defaultValue>$Setup.Internex_Fees__c.Drawal_Fee_Percentage__c</defaultValue>
        <label>Draw Fee Percentage</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Eligible_For_Funding__c</fullName>
        <description>Sum of All debtors Eligible for Funding ,Updated from Debtor Trigger</description>
        <label>Eligible For Funding1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Eligible_For_Funding_formula__c</fullName>
        <formula>Eligible_For_Funding__c</formula>
        <inlineHelpText>Eligible_For_Funding</inlineHelpText>
        <label>Eligible AR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>External_Req_Id__c</fullName>
        <description>Created it for storing external Id of Applications(Requested by Rajinikanth to create this field)</description>
        <externalId>true</externalId>
        <label>External Request Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FIU_Outstanding__c</fullName>
        <formula>(Sum_of_Received_funds__c - (Sum_of_Payments__c - ((Sum_of_IUF_Retained__c + Sum_of_Interest_Recovered__c + Sum_of_UL_Fee_Recovered__c + Sum_of_Fee__c))))- Payments__c - Sum_of_Manually_Created_IUF_Retained__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula : (Sum of Received funds - (Sum of Applied Payments - (Sum of IUF Retained + Interest Recovered + UL Fee Due Recovered + Fee)))</inlineHelpText>
        <label>Principal Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FIU_for_History_Tracking__c</fullName>
        <label>Principal Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Flag_for_Client_Maturing_Report__c</fullName>
        <formula>IF(AND(NOT(ISBLANK(Maturity_Date__c)),$Setup.BusinessTransactionDate__c.Business_Transaction_Date__c &lt;= Maturity_Date__c &amp;&amp; $Setup.BusinessTransactionDate__c.Business_Transaction_Date__c + $Setup.Configuration_for_the_Reports__c.Days_to_Calculate_for_Client_Maturing__c &gt;= Maturity_Date__c) ,True,False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Flag for Client Maturing Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Funding_Limit__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Data Source: Grade or Portal</inlineHelpText>
        <label>Facility Size</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Funding_Request_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Funding Request Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Funding_Transaction_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Funding Transaction Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gross_Availability__c</fullName>
        <label>Gross Availability1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IUF_Reserve_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>IUF Reserve Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IUF_Reserve_Retained__c</fullName>
        <defaultValue>0</defaultValue>
        <label>IUF Reserve Retained</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IUF_from_Payment__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Updated from Payment trigger to do the IUF calculations</description>
        <label>IUF from Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Index_Value__c</fullName>
        <label>Index Value</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Index__c</fullName>
        <label>Index</label>
        <picklist>
            <picklistValues>
                <fullName>Citi Prime</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internex base</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LIBOR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WS Prime</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ineligibles_Amount__c</fullName>
        <description>Updated Sum of Ineligibles of related Debtor from Debtor trigger.</description>
        <label>Ineligibles</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ineligibles_Amount_formula__c</fullName>
        <description>Showing the Ineligibles Amount in Pageblock table</description>
        <formula>Ineligibles_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Ineligibles_Amount</inlineHelpText>
        <label>Ineligibles Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Interest_Due_Since__c</fullName>
        <label>Interest Due Since</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Interest_Due__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Interest Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Interest_Initiation_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Interest_Initiation_Flag__c</fullName>
        <formula>IF(AND(NOT(ISBLANK(Interest_Initiation_Date__c)),Interest_Initiation_Date__c &lt;= $Setup.BusinessTransactionDate__c.Business_Transaction_Date__c),True,False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Interest Initiation Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interest__c</fullName>
        <label>Interest</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoice_Amount__c</fullName>
        <label>Invoice Amount</label>
        <summarizedField>Debtor__c.Invoice_Amount__c</summarizedField>
        <summaryForeignKey>Debtor__c.Client_Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Invoice_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Craeted for Quad-476</description>
        <label>Invoice Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LOC_Percent__c</fullName>
        <formula>IF(Funding_Limit__c != 0, FIU_Outstanding__c / Funding_Limit__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: Principal Balance / Facility Size</inlineHelpText>
        <label>Utilization %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Lockbox_Accounts_count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Lockbox Accounts count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MP_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>MP External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Maturity_Date__c</fullName>
        <label>Maturity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Method__c</fullName>
        <label>Method</label>
        <picklist>
            <picklistValues>
                <fullName>30 / 360</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACTUAL / 360</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACTUAL / ACTUAL</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MinCommitmentAmount__c</fullName>
        <formula>Funding_Limit__c  * (Commitment__c)</formula>
        <inlineHelpText>Min Utilization (%) * Client Funding Limit</inlineHelpText>
        <label>Min Utilization Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum_Drawal_Fee__c</fullName>
        <defaultValue>$Setup.Internex_Fees__c.Minimum_Drawal_Fee__c</defaultValue>
        <label>Minimum Draw Fee</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Minimum_Origination_Fee__c</fullName>
        <defaultValue>$Setup.Internex_Fees__c.Minimum_Origination_Fee__c</defaultValue>
        <label>Minimum Origination Fee</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Availability__c</fullName>
        <formula>Borrowing_Base__c - FIU_Outstanding__c</formula>
        <inlineHelpText>Formula : Borrowing Base - Principal Balance</inlineHelpText>
        <label>Net Availability</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Non_Accrual_Date__c</fullName>
        <label>Non-Accrual Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Non_performing_asset__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Non Accrual</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Origination_Fee_Percentage__c</fullName>
        <defaultValue>$Setup.Internex_Fees__c.Origination_Fee_Percentage__c</defaultValue>
        <label>Origination Fee Percentage</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Overline_Flag__c</fullName>
        <formula>IF(FIU_Outstanding__c &gt; Funding_Limit__c,True,False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overline Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner_CRM_ID__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Source: Grade ( CRM )</inlineHelpText>
        <label>Partner CRM ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Draw_Fee_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Formula: Sum of Partner Draw Fee of all Funding Requests</inlineHelpText>
        <label>Partner Draw Fee ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Partner_Draw_Fee__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Source: Grade ( CRM )</inlineHelpText>
        <label>Partner Draw Fee (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Partner_Name__c</fullName>
        <inlineHelpText>Source: Grade ( CRM )</inlineHelpText>
        <label>Partner Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Origination_Fee_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Formula: Sum of Partner Origination Fee of all Funding Requests</inlineHelpText>
        <label>Partner Origination Fee ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Partner_Origination_Fee__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Source: Grade ( CRM )</inlineHelpText>
        <label>Partner Origination Fee (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Partner_Type__c</fullName>
        <inlineHelpText>Source: Grade ( CRM )</inlineHelpText>
        <label>Partner Type</label>
        <picklist>
            <picklistValues>
                <fullName>Broker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Channel</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner</label>
        <referenceTo>Partner__c</referenceTo>
        <relationshipLabel>Client Accounts</relationshipLabel>
        <relationshipName>Client_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_balance__c</fullName>
        <formula>Payments__c</formula>
        <inlineHelpText>Payments__c</inlineHelpText>
        <label>Payment balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payments__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Updated from payment Trigger</description>
        <label>Payments</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Portal_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>Portal External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Primary_Contact_External_ID__c</fullName>
        <label>Primary Contact External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Client Accounts</relationshipLabel>
        <relationshipName>Client_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Prior_value_of_FIU__c</fullName>
        <label>Prior value of FIU</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_External_Foreign_Key__c</fullName>
        <externalId>true</externalId>
        <label>Product External Foreign Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipName>Client_Products</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Profile_Name__c</fullName>
        <formula>$User.Profile_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>$User.Profile_Name</inlineHelpText>
        <label>Profile Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_Type__c</fullName>
        <label>Rate Type</label>
        <picklist>
            <picklistValues>
                <fullName>Fixed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Floating</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <label>Interest Rate</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Renewal_Approval_Date__c</fullName>
        <label>Renewal Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Renewal_Date__c</fullName>
        <label>Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Secondary_Contact_External_Id__c</fullName>
        <label>Secondary Contact External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Secondary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Client Accounts (Secondary Contact)</relationshipLabel>
        <relationshipName>Client_Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Send_to_Grade__c</fullName>
        <label>Send to Grade</label>
        <summaryFilterItems>
            <field>Debtor__c.Send_to_Grade__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Debtor__c.Client_Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Send_to_Portal__c</fullName>
        <label>Send to Portal</label>
        <summaryFilterItems>
            <field>Debtor__c.Send_to_Portal__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Debtor__c.Client_Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spread__c</fullName>
        <label>Spread</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>TEXT(Client__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sum_of_Draw_Fees__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Sum of Draw Fees</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sum_of_Fee__c</fullName>
        <description>Used in Principal Balance Formula</description>
        <label>Sum of Fee</label>
        <summarizedField>Fees__c.Fees_Due__c</summarizedField>
        <summaryForeignKey>Fees__c.Client_Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Sum_of_IUF_Retained__c</fullName>
        <description>Sum of IUF Retained from IUF table</description>
        <label>Sum of IUF Retained</label>
        <summarizedField>IUF__c.IUF_Retained__c</summarizedField>
        <summaryForeignKey>IUF__c.Client_Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Sum_of_IUF_Used__c</fullName>
        <description>Sum of IUF Used of All IUFs</description>
        <label>Sum of IUF Used</label>
        <summarizedField>IUF__c.IUF_used__c</summarizedField>
        <summaryForeignKey>IUF__c.Client_Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Sum_of_Interest_Recovered__c</fullName>
        <label>Sum of Interest Recovered</label>
        <summarizedField>IUF__c.Interest_Due_Recovered__c</summarizedField>
        <summaryForeignKey>IUF__c.Client_Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Sum_of_Manually_Created_IUF_Retained__c</fullName>
        <label>Sum of Manually Created IUF Retained</label>
        <summarizedField>IUF__c.IUF_Retained__c</summarizedField>
        <summaryFilterItems>
            <field>IUF__c.Type__c</field>
            <operation>equals</operation>
            <value>Manual</value>
        </summaryFilterItems>
        <summaryForeignKey>IUF__c.Client_Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Sum_of_Net_Availability__c</fullName>
        <description>Showing the Gross Availability in Pageblock Table</description>
        <formula>Gross_Availability__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Gross_Availability</inlineHelpText>
        <label>Gross Availability</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sum_of_Origination_Fees__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Sum of Origination Fees</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sum_of_Payments__c</fullName>
        <description>Getting Updated from Debtor Payments.</description>
        <label>Sum of Payments</label>
        <summarizedField>Debtor__c.Sum_of_Payments__c</summarizedField>
        <summaryForeignKey>Debtor__c.Client_Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Sum_of_Received_funds__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Getting Update from Funding Request Trigger</description>
        <label>Sum of Amount Drawn</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sum_of_UL_Fee_Recovered__c</fullName>
        <label>Sum of UL Fee Recovered</label>
        <summarizedField>IUF__c.UL_Fee_Due_Recovered__c</summarizedField>
        <summaryForeignKey>IUF__c.Client_Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Sum_of_UNPAID_Fees__c</fullName>
        <label>Sum of UNPAID Fees</label>
        <summarizedField>Fees__c.Fee_Balance__c</summarizedField>
        <summaryFilterItems>
            <field>Fees__c.Fee_status__c</field>
            <operation>equals</operation>
            <value>UNPAID</value>
        </summaryFilterItems>
        <summaryForeignKey>Fees__c.Client_Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Sync_with_Grade__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sync with Grade</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sync_with_Market_Place__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sync with Market Place</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sync_with_Portal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sync with Portal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_AP_Value__c</fullName>
        <formula>AP_Current__c + AP_1_15__c + AP_16_30__c + AP_31_60__c + AP_61_90__c + AP_90__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total AP Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Eligible_AR__c</fullName>
        <label>Total Eligible AR Limit</label>
        <summarizedField>Debtor__c.Eligible_AR__c</summarizedField>
        <summaryForeignKey>Debtor__c.Client_Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>UL_Fee_Due_Since__c</fullName>
        <label>UL Fee Due Since</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UL_Fee_Due__c</fullName>
        <defaultValue>0</defaultValue>
        <label>UL Fee Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>